change image ratio

--- a/public/list.ejs
+++ b/public/list.ejs
@@ -1,16 +1,71 @@
 <html>
-<body bgcolor="#ccffcc">
-<h1>Learned Image List</h1>
-<table border="1" style="background-color: #cccccc;">
-<tr style="background-color: #ffffcc;"><th>ID</th><th>Image</th><th>Letter</th></tr>
+<head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+<title>SmertPhone Pen - Admin</title>
+<script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js"></script>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css"/>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script>
+function delImage( id ){
+  $.ajax({
+    type: "DELETE",
+    url: "./del_image",
+    data: "id=" + id,
+    success: function( data ){
+      //console.log( data );
+      var json = JSON.parse( data );
+      var image_id = json.image_id;
+      if( image_id.indexOf( "error-" ) != 0 ){
+        $('#'+image_id).remove();
+      }
+    },
+    error: function( jqXHR, textStatus, errorThrown ){
+      console.log( textStatus + " : " + errorThrown );
+    }
+  });
+}
+</script>
+</head>
+<body>
+  <!-- //navi -->
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="./admin">学習済みイメージ</a>
+      <button class="navbar-toggle" data-toggle="collapse" data-target=".target">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+    <div class="collapse navbar-collapse target">
+      <ul class="nav navbar-nav navbar-right">   
+      	<li>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- navi// -->
+
+  <!-- //list -->
+  <div class="container" style="padding:60px 0;">
+    <table class="table table-striped table-bordered">
+      <thead>
+        <tr style="background-color: #ffffcc;"><th>ID</th><th>Image</th><th>Letter</th><th>Action</th></tr>
+      </thead>
+      <tbody>
 <% for( var i = 0; i < letters.length; i ++ ){ %>
-<tr>
+<tr id="<%= image_ids[i] %>">
  <td><%= image_ids[i] %></td>
  <td><img src="<%= image_urls[i] %>"/></td>
  <td><%= letters[i] %></td>
+ <td><button type="button" class="btn btn-danger" onClick="delImage('<%= image_ids[i] %>');"><i class="glyphicon glyphicon-trash"></i></button></td>
 </tr>
 <% } %>
-</table>
+      </tbody>
+    </table>
+  </div>
+  <!-- list// -->
 </body>
 </html>
 
